--- a/index.html
+++ b/index.html
@@ -193,17 +193,16 @@
         >
           <div class="name-container">
             <span class="name-container_descr">Имя</span>
-            <input name="name" placeholder="Как к тебе обращаться?" required />
+            <input name="name" placeholder="Как к тебе обращаться?" />
           </div>
           <div class="name-container">
             <span class="name-container_descr">Контакты</span>
-            <input name="phone" placeholder="Ваши контакты" required />
+            <input name="phone" placeholder="Ваши контакты" />
           </div>
           <div>
             <button class="contacts_item4 btn" type="submit">
               Получить констультацию
             </button>
-            <input type="hidden" name="act" value="order" />
           </div>
         </form>
         <!-- 
